--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ons",
-  "version": "1.0.0",
-  "description": "Subscriber client for Alinyun ONS.",
+  "version": "1.0.1",
+  "description": "SDK of Node.js for Aliyun ONS (Aliyun Open Notification Service).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,8 +11,9 @@
     "url": "git+https://github.com/XadillaX/aliyun-ons.git"
   },
   "keywords": [
-    "ONS",
-    "Aliyun Message Queue"
+    "ons",
+    "aliyun",
+    "aliyun open notification service"
   ],
   "author": "XadillaX <i@2333.moe>",
   "license": "MIT",
