--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ons-subscriber",
-  "version": "1.0.0",
+  "name": "ons",
+  "version": "0.0.1",
   "description": "Subscriber client for Alinyun ONS.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/XadillaX/ons-subscriber.git"
+    "url": "git+https://github.com/XadillaX/aliyun-ons.git"
   },
   "keywords": [
     "ONS",
@@ -17,9 +17,9 @@
   "author": "XadillaX <i@2333.moe>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/XadillaX/ons-subscriber/issues"
+    "url": "https://github.com/XadillaX/aliyun-ons/issues"
   },
-  "homepage": "https://github.com/XadillaX/ons-subscriber#readme",
+  "homepage": "https://github.com/XadillaX/aliyun-ons#readme",
   "dependencies": {
   }
 }
