--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,11 @@
-environment:
-  nodejs_version: "4"
-
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node 4
   - npm install
 
 test_script:
   - npm test
+
+configuration:
+  - Release
+
+build: off
