--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ons",
-  "version": "1.5.0",
+  "version": "2.0.0-rc.1",
   "description": "SDK of Node.js for Aliyun ONS (Aliyun Open Notification Service).",
   "main": "index.js",
   "scripts": {
