--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ons",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "description": "SDK of Node.js for Aliyun ONS (Aliyun Open Notification Service).",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/XadillaX/aliyun-ons.git"
   },
+  "files": [
+    "./src/third_party/lib/linux",
+    "./src/third_party/lib/windows"
+  ],
   "keywords": [
     "ons",
     "aliyun",
