--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 platform: x64
+os: Visual Studio 2015
 install:
   - git submodule update --init --recursive
-  - ps: Install-Product node 4
+  - ps: Install-Product node 4 x64
   - npm -g install npm@next
   - npm install
 
