--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - export CXX="g++-4.8" CXX="gcc-4.8"
   - export NODE_ONS_LOG=true
   - npm install
+  - mkdir -p ~/logs/metaq-client4cpp
 addons:
   apt:
     sources:
