--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "src/third_party/lib/windows/64x/ONSClient4CPP.dll",
     "src/third_party/lib/windows/64x/ONSClient4CPP.lib",
     "src/third_party/lib/windows/64x/ONSClient4CPP.pdb",
-
     "example",
     "lib",
     "src",
@@ -43,8 +42,11 @@
   },
   "homepage": "https://github.com/XadillaX/aliyun-ons#readme",
   "dependencies": {
+    "fs-extra": "^1.0.0",
     "lei-stream": "^1.3.0",
-    "nan": "^2.4.0"
+    "nan": "^2.4.0",
+    "node-watch": "^0.4.1",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "heapdump": "^0.3.7",
