--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ons",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "description": "SDK of Node.js for Aliyun ONS (Aliyun Open Notification Service).",
   "main": "index.js",
   "scripts": {
@@ -37,10 +37,14 @@
   },
   "homepage": "https://github.com/XadillaX/aliyun-ons#readme",
   "dependencies": {
+    "blueimp-md5": "^2.7.0",
+    "eventemitter2": "^4.1.0",
     "fs-extra": "^2.1.2",
     "lei-stream": "^1.3.0",
     "nan": "^2.6.2",
     "node-watch": "^0.5.2",
+    "scarlet-task": "^1.0.0",
+    "spidex": "^2.2.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
